Fix text alignment of CV section

--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,7 @@ a{
 }
 
 p.alt{
+    text-align: right;
     padding-top: 3px;
     color: #999;
 }
